--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -50,6 +50,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.title {
+  font-size: 44px;
+  line-height: 44px;
+  font-weight: bold;
+}
 
 
