--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -55,5 +55,12 @@ body {
   line-height: 44px;
   font-weight: bold;
 }
+@media  (max-width: 480px) {
+  .title {
+    font-size: 24px;
+    line-height: 24px;
+    font-weight: bold;
+  }
+}
 
 
